# mapwingis-osgeo

./: CMakeLists.txt  MapWinGIS.cpp  MapWinGIS.h  MapWinGIS.idl  MapWinGIS.rc  MapWinGIS.rgs  MapWinGIS.vcxproj  MapWinGIS.vcxproj.filters  MapWinGIS2012.sln  Resource.h  StdAfx.h  readme.org
COM classes/: GeoProjection.cpp  Measuring.cpp  Shapefile.cpp  TableClass.cpp  TableClass.h  TileProviders.cpp
Control/: GlobalVars.cpp  GlobalVars.h  Map.cpp  Map.h  Map_Drawing.cpp  Map_Events.cpp
Image/: cq.c
Shapefile/: ShapePoint.h  dbfopen.cpp
SupportingLibraries/include/atlhttp/: atlisapi.h
TestApplication/TestData/ClipGridByPolygon/: AHN-10.asc  ClippingPolygon-AHN.dbf  ClippingPolygon-AHN.prj  ClippingPolygon-AHN.shx
TestApplication/TestData/Grids/Formats/: Clip_L7_20000423_B2.tif  Clip_L7_20000423_B5.tif  Histogram.tif
TestApplication/TestData/Images/Formats/: 18665_1.KAP.aux.xml  18665_1.mwleg  GIF-Graphics-Interchange-Format.gif.aux.xml  GIF-Graphics-Interchange-Format.mwleg  GTiff-GeoTIFF.mwleg  Greyscale.mwleg  Greyscale2.mwleg  Greyscale2.ntf  Greyscale2.ntf.aux.xml  HFA-Erdas-Imagine-Image.mwleg  JP2ECW-ERMapper-JPEG2000.mwleg  NITF-National-Imagery-Transmission-Format.LF2  NITF-National-Imagery-Transmission-Format.mwleg  PNM-Portable-Pixmap-Format.ppm  coiba_20m_2k.mwleg  mercator.mwleg  mercator.sid  mercator.sid.aux.xml  sht_124.mwleg  sht_124.sid.aux.xml
TestApplication/TestData/Images/Formats/vrt/: 32dn2_06.tfw  32dn2_06.tif.aux.xml  32dn2_07.tfw  32dn2_07.tif.aux.xml  testTool.mwleg  testTool.vrt
TestApplication/TestData/MapWindow-Projects/Newton/: Newton.mwprj
TestApplication/TestData/MapWindow-Projects/Newton/Images/: newtned30.bmp.aux.xml  newtned30.bpw  newtned30.prj
TestApplication/TestData/MapWindow-Projects/Newton/Shapefiles/: 16010202rch.dbf  16010202rch.shp  16010202rch.shx  16010202wb.dbf  16010202wb.shp  16010202wb.shx  24kquadgrid.dbf  24kquadgrid.shp  24kquadgrid.shx  cat.dbf  cat.shp  cat.shx  cnty.dbf  cnty.shp  cnty.shx  fhards.dbf  fhards.shp  fhards.shx  newton.dbf  newton.shp  newton.shx  ownership.dbf  ownership.lbl  ownership.shp  ownership.shx  pcs3.dbf  pcs3.lbl  pcs3.shp  pcs3.shp.mwsymb  pcs3.shx  springs.dbf  springs.shp  springs.shx  st.dbf  st.shp  st.shx  st_aomun.dbf  st_aomun.shp  st_aomun.shx  trrds.dbf  (+12 more)
TestApplication/TestData/MapWindow-Projects/TheNetherlands/: Assen.dbf  Assen.prj  Assen.shp  Assen.shx  Buurtkaart.shp.mwsymb  Gemeentegrenzen.dbf  Gemeentegrenzen.lbl  Provincies.dbf  Provincies.lbl  Provincies.prj  Provincies.shp  Provincies.shp.mwsymb  Provincies.shx  The Nederlands.mwprj  Wijkkaart.dbf  Wijkkaart.shp.mwsymb
TestApplication/TestData/MapWindow-Projects/UnitedStates/: UnitedStates.mwprj
TestApplication/TestData/MapWindow-Projects/World/: World.mwprj
TestApplication/TestData/MapWindow-Projects/World/Raster/: ClipGridByPolygonTest.hdr  ClipGridByPolygonTest.mwleg  ClipGridByPolygonTest.prj  NE2_50M_SR.jpg.aux.xml
TestApplication/TestData/MapWindow-Projects/World/Shapefiles/: 10m_land.mwsr  50m_admin_0_countries.lbl  50m_admin_0_countries.mwsr  WORLD30.mwsr  cities_capital_pt.dbf  cities_capital_pt.lbl  cities_capital_pt.mwsr  cities_capital_pt.shp  cities_capital_pt.shx  latlong.mwsr  river_quality_li.dbf  river_quality_li.lbl  river_quality_li.mwsr  river_quality_li.shp  river_quality_li.shx  states.chart  states.mwsr  states.shp.mwsymb  wilderness_areas.dbf  wilderness_areas.mwsr  wilderness_areas.shp  wilderness_areas.shp.mwsymb  wilderness_areas.shx  world_adm0.dbf  world_adm0.lbl  world_adm0.mwsr  world_adm0.shp  world_adm0.shp.mwsymb  world_adm0.shx
TestApplication/TestData/Shapefiles/: LargePolygon.shp  LargePolygon.shx  MultiPoints.dbf  MultiPoints.shp  MultiPoints.shx  PolygonM.dbf  PolygonM.prj  PolygonM.shp  PolygonM.shx
Tiles/Providers/: YandexProvider.h
Utilities/: UtilityFunctions.cpp
cmake/Modules/: FindGEOS.cmake  FindGEOTIFF.cmake  FindSQLITE.cmake  FindShapeLib.cmake  FindSpatialIndex.cmake  FindTIFF.cmake  osgeo_hint.cmake  runtime.cmake
osgeo-packaging/: MapWindow.cmd  mapwindow.tar.bz2.template  mapwingis-debug.tar.bz2.template  mapwingis-release.tar.bz2.template  pack.cmd  size_md5.cmd  ts.vbs
tests/: CMakeLists.txt  inst_shapef.cpp
